--- a/.github/workflows/redeploy-on-sanity-change.yml
+++ b/.github/workflows/redeploy-on-sanity-change.yml
@@ -1,8 +1,8 @@
 name: Clear All Caches and Redeploy
 
 on:
-  repository_dispatch:
-    types: [sanity-content-updated]
+  push:
+    branches: [ main ]
   workflow_dispatch:
 
 jobs:
