--- a/.github/workflows/redeploy-on-sanity-change.yml
+++ b/.github/workflows/redeploy-on-sanity-change.yml
@@ -1,8 +1,8 @@
 name: Clear All Caches and Redeploy
 
 on:
-  push:
-    branches: [ main ]
+  repository_dispatch:
+    types: [sanity-content-updated]
   workflow_dispatch:
 
 jobs:
@@ -14,17 +14,15 @@ jobs:
 
       - name: Clear Vercel Cache
         run: |
+          echo "Clearing Vercel cache..."
           curl -X DELETE "https://api.vercel.com/v1/projects/${{ secrets.VERCEL_PROJECT_ID }}/domains/${{ secrets.VERCEL_DOMAIN }}/cache" \
-            -H "Authorization: Bearer ${{ secrets.VERCEL_TOKEN }}"
+            -H "Authorization: Bearer ${{ secrets.VERCEL_TOKEN }}" || echo "Cache clear failed, continuing..."
 
       - name: Wait for cache clear
         run: sleep 15
 
       - name: Trigger Fresh Deployment
         run: |
+          echo "Triggering deployment..."
           curl -X POST "${{ secrets.VERCEL_DEPLOY_HOOK_URL }}"
-
-      - name: Deployment Status
-        run: |
           echo "✅ Cache cleared and deployment triggered!"
-          echo "🚀 Your site will be updated in 2-3 minutes"
