--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@vercel/analytics": "^1.5.0",
+    "@vercel/speed-insights": "^1.2.0",
     "autoprefixer": "^10.0.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
